# compoker

./: .gitignore  .tool-versions  Cargo.toml  README.md  package-lock.json  package.json  rollup.config.js  tsconfig.json
public/: global.css  index.html
src/: main.md  main.rs  poker_server.rs  web_server.rs
ui/: App.svelte  CurrentIssueDescription.svelte  JoinOrCreateSession.svelte  ParticipantAvatar.svelte  ParticipantListEntry.svelte  Session.svelte  SessionParticipantList.svelte  VoteCard.svelte  VotingArea.svelte  confetti.ts  main.ts  store.ts
ui/pages/: JoinSession.svelte  NewSession.svelte  _layout.svelte  index.svelte
